sdk-docs_versioned_docs/version-19.0.0/modules/Types/Types.md
---
id: "Types"
title: "Module: Types"
sidebar_label: "Types"
---

## Enumerations

- [AssetHoldersOrderBy](../../enums/Types/AssetHoldersOrderBy/AssetHoldersOrderBy.md)
- [AuthTypeEnum](../../enums/Types/AuthTypeEnum/AuthTypeEnum.md)
- [AuthorizationStatusEnum](../../enums/Types/AuthorizationStatusEnum/AuthorizationStatusEnum.md)
- [AuthorizationType](../../enums/Types/AuthorizationType/AuthorizationType.md)
- [CalendarUnit](../../enums/Types/CalendarUnit/CalendarUnit.md)
- [CallIdEnum](../../enums/Types/CallIdEnum/CallIdEnum.md)
- [ClaimType](../../enums/Types/ClaimType/ClaimType.md)
- [ClaimTypeEnum](../../enums/Types/ClaimTypeEnum/ClaimTypeEnum.md)
- [ConditionTarget](../../enums/Types/ConditionTarget/ConditionTarget.md)
- [ConditionType](../../enums/Types/ConditionType/ConditionType.md)
- [ErrorCode](../../enums/Types/ErrorCode/ErrorCode.md)
- [EventIdEnum](../../enums/Types/EventIdEnum/EventIdEnum.md)
- [ExtrinsicsOrderBy](../../enums/Types/ExtrinsicsOrderBy/ExtrinsicsOrderBy.md)
- [InstructionStatusEnum](../../enums/Types/InstructionStatusEnum/InstructionStatusEnum.md)
- [KnownAssetType](../../enums/Types/KnownAssetType/KnownAssetType.md)
- [ModuleIdEnum](../../enums/Types/ModuleIdEnum/ModuleIdEnum.md)
- [Order](../../enums/Types/Order/Order.md)
- [PayingAccountType](../../enums/Types/PayingAccountType/PayingAccountType.md)
- [PermissionGroupType](../../enums/Types/PermissionGroupType/PermissionGroupType.md)
- [PermissionType](../../enums/Types/PermissionType/PermissionType.md)
- [ProposalStateEnum](../../enums/Types/ProposalStateEnum/ProposalStateEnum.md)
- [PublicEnum7A0B4Cc03E](../../enums/Types/PublicEnum7A0B4Cc03E/PublicEnum7A0B4Cc03E.md)
- [PublicEnum8F5A39C8Ee](../../enums/Types/PublicEnum8F5A39C8Ee/PublicEnum8F5A39C8Ee.md)
- [RoleType](../../enums/Types/RoleType/RoleType.md)
- [ScopeType](../../enums/Types/ScopeType/ScopeType.md)
- [SecurityIdentifierType](../../enums/Types/SecurityIdentifierType/SecurityIdentifierType.md)
- [SettlementDirectionEnum](../../enums/Types/SettlementDirectionEnum/SettlementDirectionEnum.md)
- [SettlementResultEnum](../../enums/Types/SettlementResultEnum/SettlementResultEnum.md)
- [SignerType](../../enums/Types/SignerType/SignerType.md)
- [StatOpTypeEnum](../../enums/Types/StatOpTypeEnum/StatOpTypeEnum.md)
- [StatType](../../enums/Types/StatType/StatType.md)
- [TransactionArgumentType](../../enums/Types/TransactionArgumentType/TransactionArgumentType.md)
- [TransactionOrderFields](../../enums/Types/TransactionOrderFields/TransactionOrderFields.md)
- [TransactionStatus](../../enums/Types/TransactionStatus/TransactionStatus.md)
- [TransferComplianceTypeEnum](../../enums/Types/TransferComplianceTypeEnum/TransferComplianceTypeEnum.md)
- [TransferError](../../enums/Types/TransferError/TransferError.md)
- [TransferRestrictionType](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md)
- [TransferRestrictionTypeEnum](../../enums/Types/TransferRestrictionTypeEnum/TransferRestrictionTypeEnum.md)
- [TransferStatus](../../enums/Types/TransferStatus/TransferStatus.md)
- [TxGroup](../../enums/Types/TxGroup/TxGroup.md)

## Interfaces

- [AccreditedClaim](../../interfaces/Types/AccreditedClaim/AccreditedClaim.md)
- [ActiveTransferRestrictions](../../interfaces/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)
- [AddCountStatInput](../../interfaces/Types/AddCountStatInput/AddCountStatInput.md)
- [AffiliateClaim](../../interfaces/Types/AffiliateClaim/AffiliateClaim.md)
- [ArrayTransactionArgument](../../interfaces/Types/ArrayTransactionArgument/ArrayTransactionArgument.md)
- [AssetDocument](../../interfaces/Types/AssetDocument/AssetDocument.md)
- [AssetWithGroup](../../interfaces/Types/AssetWithGroup/AssetWithGroup.md)
- [Balance](../../interfaces/Types/Balance/Balance.md)
- [BlockedClaim](../../interfaces/Types/BlockedClaim/BlockedClaim.md)
- [BuyLockupClaim](../../interfaces/Types/BuyLockupClaim/BuyLockupClaim.md)
- [CalendarPeriod](../../interfaces/Types/CalendarPeriod/CalendarPeriod.md)
- [CddClaim](../../interfaces/Types/CddClaim/CddClaim.md)
- [CddProviderRole](../../interfaces/Types/CddProviderRole/CddProviderRole.md)
- [CheckPermissionsResult](../../interfaces/Types/CheckPermissionsResult/CheckPermissionsResult.md)
- [CheckRolesResult](../../interfaces/Types/CheckRolesResult/CheckRolesResult.md)
- [CheckpointWithData](../../interfaces/Types/CheckpointWithData/CheckpointWithData.md)
- [ClaimCountRestrictionValue](../../interfaces/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md)
- [ClaimCountTransferRestriction](../../interfaces/Types/ClaimCountTransferRestriction/ClaimCountTransferRestriction.md)
- [ClaimData](../../interfaces/Types/ClaimData/ClaimData.md)
- [ClaimPercentageRestrictionValue](../../interfaces/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md)
- [ClaimPercentageTransferRestriction](../../interfaces/Types/ClaimPercentageTransferRestriction/ClaimPercentageTransferRestriction.md)
- [ClaimScope](../../interfaces/Types/ClaimScope/ClaimScope.md)
- [ClaimTarget](../../interfaces/Types/ClaimTarget/ClaimTarget.md)
- [ComplexTransactionArgument](../../interfaces/Types/ComplexTransactionArgument/ComplexTransactionArgument.md)
- [Compliance](../../interfaces/Types/Compliance/Compliance.md)
- [ComplianceRequirements](../../interfaces/Types/ComplianceRequirements/ComplianceRequirements.md)
- [ConditionBase](../../interfaces/Types/ConditionBase/ConditionBase.md)
- [ConditionCompliance](../../interfaces/Types/ConditionCompliance/ConditionCompliance.md)
- [CountTransferRestriction](../../interfaces/Types/CountTransferRestriction/CountTransferRestriction.md)
- [CreateTransactionBatchProcedureMethod](../../interfaces/Types/CreateTransactionBatchProcedureMethod/CreateTransactionBatchProcedureMethod.md)
- [DistributionPayment](../../interfaces/Types/DistributionPayment/DistributionPayment.md)
- [DistributionWithDetails](../../interfaces/Types/DistributionWithDetails/DistributionWithDetails.md)
- [EventIdentifier](../../interfaces/Types/EventIdentifier/EventIdentifier.md)
- [ExemptedClaim](../../interfaces/Types/ExemptedClaim/ExemptedClaim.md)
- [ExternalAgentCondition](../../interfaces/Types/ExternalAgentCondition/ExternalAgentCondition.md)
- [ExtrinsicData](../../interfaces/Types/ExtrinsicData/ExtrinsicData.md)
- [ExtrinsicDataWithFees](../../interfaces/Types/ExtrinsicDataWithFees/ExtrinsicDataWithFees.md)
- [Fees](../../interfaces/Types/Fees/Fees.md)
- [GroupedInstructions](../../interfaces/Types/GroupedInstructions/GroupedInstructions.md)
- [HistoricAgentOperation](../../interfaces/Types/HistoricAgentOperation/HistoricAgentOperation.md)
- [IdentityCondition](../../interfaces/Types/IdentityCondition/IdentityCondition.md)
- [IdentityRole](../../interfaces/Types/IdentityRole/IdentityRole.md)
- [IdentityWithClaims](../../interfaces/Types/IdentityWithClaims/IdentityWithClaims.md)
- [ImmortalProcedureOptValue](../../interfaces/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md)
- [InvestorUniquenessClaim](../../interfaces/Types/InvestorUniquenessClaim/InvestorUniquenessClaim.md)
- [InvestorUniquenessV2Claim](../../interfaces/Types/InvestorUniquenessV2Claim/InvestorUniquenessV2Claim.md)
- [JurisdictionClaim](../../interfaces/Types/JurisdictionClaim/JurisdictionClaim.md)
- [KycClaim](../../interfaces/Types/KycClaim/KycClaim.md)
- [MiddlewareConfig](../../interfaces/Types/MiddlewareConfig/MiddlewareConfig.md)
- [MortalProcedureOptValue](../../interfaces/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)
- [MultiClaimCondition](../../interfaces/Types/MultiClaimCondition/MultiClaimCondition.md)
- [NetworkProperties](../../interfaces/Types/NetworkProperties/NetworkProperties.md)
- [NoArgsProcedureMethod](../../interfaces/Types/NoArgsProcedureMethod/NoArgsProcedureMethod.md)
- [NoDataClaim](../../interfaces/Types/NoDataClaim/NoDataClaim.md)
- [NoTypeClaim](../../interfaces/Types/NoTypeClaim/NoTypeClaim.md)
- [OfferingWithDetails](../../interfaces/Types/OfferingWithDetails/OfferingWithDetails.md)
- [PaginationOptions](../../interfaces/Types/PaginationOptions/PaginationOptions.md)
- [PayingAccountFees](../../interfaces/Types/PayingAccountFees/PayingAccountFees.md)
- [PercentageTransferRestriction](../../interfaces/Types/PercentageTransferRestriction/PercentageTransferRestriction.md)
- [PermissionGroups](../../interfaces/Types/PermissionGroups/PermissionGroups.md)
- [PermissionedAccount](../../interfaces/Types/PermissionedAccount/PermissionedAccount.md)
- [Permissions](../../interfaces/Types/Permissions/Permissions.md)
- [PlainTransactionArgument](../../interfaces/Types/PlainTransactionArgument/PlainTransactionArgument.md)
- [PortfolioCustodianRole](../../interfaces/Types/PortfolioCustodianRole/PortfolioCustodianRole.md)
- [PortfolioId](../../interfaces/Types/PortfolioId/PortfolioId.md)
- [PortfolioMovement](../../interfaces/Types/PortfolioMovement/PortfolioMovement.md)
- [ProcedureAuthorizationStatus](../../interfaces/Types/ProcedureAuthorizationStatus/ProcedureAuthorizationStatus.md)
- [ProcedureMethod](../../interfaces/Types/ProcedureMethod/ProcedureMethod.md)
- [ProcedureOpts](../../interfaces/Types/ProcedureOpts/ProcedureOpts.md)
- [ProtocolFees](../../interfaces/Types/ProtocolFees/ProtocolFees.md)
- [Requirement](../../interfaces/Types/Requirement/Requirement.md)
- [RequirementCompliance](../../interfaces/Types/RequirementCompliance/RequirementCompliance.md)
- [ResultSet](../../interfaces/Types/ResultSet/ResultSet.md)
- [ScheduleWithDetails](../../interfaces/Types/ScheduleWithDetails/ScheduleWithDetails.md)
- [Scope](../../interfaces/Types/Scope/Scope.md)
- [SectionPermissions](../../interfaces/Types/SectionPermissions/SectionPermissions.md)
- [SecurityIdentifier](../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)
- [SellLockupClaim](../../interfaces/Types/SellLockupClaim/SellLockupClaim.md)
- [SignerValue](../../interfaces/Types/SignerValue/SignerValue.md)
- [SimpleEnumTransactionArgument](../../interfaces/Types/SimpleEnumTransactionArgument/SimpleEnumTransactionArgument.md)
- [SimplePermissions](../../interfaces/Types/SimplePermissions/SimplePermissions.md)
- [SingleClaimCondition](../../interfaces/Types/SingleClaimCondition/SingleClaimCondition.md)
- [StatAccreditedClaimInput](../../interfaces/Types/StatAccreditedClaimInput/StatAccreditedClaimInput.md)
- [StatAffiliateClaimInput](../../interfaces/Types/StatAffiliateClaimInput/StatAffiliateClaimInput.md)
- [StatClaimIssuer](../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md)
- [StatJurisdictionClaimInput](../../interfaces/Types/StatJurisdictionClaimInput/StatJurisdictionClaimInput.md)
- [TickerOwnerRole](../../interfaces/Types/TickerOwnerRole/TickerOwnerRole.md)
- [TransactionPermissions](../../interfaces/Types/TransactionPermissions/TransactionPermissions.md)
- [TrustedClaimIssuer](../../interfaces/Types/TrustedClaimIssuer/TrustedClaimIssuer.md)
- [TxData](../../interfaces/Types/TxData/TxData.md)
- [VenueOwnerRole](../../interfaces/Types/VenueOwnerRole/VenueOwnerRole.md)

## References

### AddAssetRequirementParams

Re-exports [AddAssetRequirementParams](../../interfaces/API/Procedures/Types/AddAssetRequirementParams/AddAssetRequirementParams.md)

___

### AddAssetStatParams

Re-exports [AddAssetStatParams](../API/Procedures/Types/Types.md#addassetstatparams)

___

### AddClaimCountStatParams

Re-exports [AddClaimCountStatParams](../API/Procedures/Types/Types.md#addclaimcountstatparams)

___

### AddClaimCountTransferRestrictionParams

Re-exports [AddClaimCountTransferRestrictionParams](../API/Procedures/Types/Types.md#addclaimcounttransferrestrictionparams)

___

### AddClaimPercentageStatParams

Re-exports [AddClaimPercentageStatParams](../API/Procedures/Types/Types.md#addclaimpercentagestatparams)

___

### AddClaimPercentageTransferRestrictionParams

Re-exports [AddClaimPercentageTransferRestrictionParams](../API/Procedures/Types/Types.md#addclaimpercentagetransferrestrictionparams)

___

### AddClaimsParams

Re-exports [AddClaimsParams](../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md)

___

### AddCountStatParams

Re-exports [AddCountStatParams](../API/Procedures/Types/Types.md#addcountstatparams)

___

### AddCountTransferRestrictionParams

Re-exports [AddCountTransferRestrictionParams](../API/Procedures/Types/Types.md#addcounttransferrestrictionparams)

___

### AddInstructionParams

Re-exports [AddInstructionParams](../API/Procedures/Types/Types.md#addinstructionparams)

___

### AddInstructionWithVenueIdParams

Re-exports [AddInstructionWithVenueIdParams](../API/Procedures/Types/Types.md#addinstructionwithvenueidparams)

___

### AddInstructionsParams

Re-exports [AddInstructionsParams](../../interfaces/API/Procedures/Types/AddInstructionsParams/AddInstructionsParams.md)

___

### AddInvestorUniquenessClaimParams

Re-exports [AddInvestorUniquenessClaimParams](../../interfaces/API/Procedures/Types/AddInvestorUniquenessClaimParams/AddInvestorUniquenessClaimParams.md)

___

### AddPercentageStatParams

Re-exports [AddPercentageStatParams](../API/Procedures/Types/Types.md#addpercentagestatparams)

___

### AddPercentageTransferRestrictionParams

Re-exports [AddPercentageTransferRestrictionParams](../API/Procedures/Types/Types.md#addpercentagetransferrestrictionparams)

___

### AddRestrictionParams

Re-exports [AddRestrictionParams](../API/Procedures/Types/Types.md#addrestrictionparams)

___

### AffirmInstructionParams

Re-exports [AffirmInstructionParams](../../interfaces/API/Procedures/Types/AffirmInstructionParams/AffirmInstructionParams.md)

___

### AffirmationStatus

Re-exports [AffirmationStatus](../../enums/API/Entities/Instruction/Types/AffirmationStatus/AffirmationStatus.md)

___

### AgentWithGroup

Re-exports [AgentWithGroup](../../interfaces/API/Entities/Asset/Types/AgentWithGroup/AgentWithGroup.md)

___

### AllowanceOperation

Re-exports [AllowanceOperation](../../enums/API/Procedures/Types/AllowanceOperation/AllowanceOperation.md)

___

### AssetBase

Re-exports [AssetBase](../../interfaces/API/Procedures/Types/AssetBase/AssetBase.md)

___

### AssetDetails

Re-exports [AssetDetails](../../interfaces/API/Entities/Asset/Types/AssetDetails/AssetDetails.md)

___

### AssetTx

Re-exports [AssetTx](../../enums/Generated/Types/AssetTx/AssetTx.md)

___

### AuthorshipTx

Re-exports [AuthorshipTx](../../enums/Generated/Types/AuthorshipTx/AuthorshipTx.md)

___

### BabeTx

Re-exports [BabeTx](../../enums/Generated/Types/BabeTx/BabeTx.md)

___

### BalancesTx

Re-exports [BalancesTx](../../enums/Generated/Types/BalancesTx/BalancesTx.md)

___

### BridgeTx

Re-exports [BridgeTx](../../enums/Generated/Types/BridgeTx/BridgeTx.md)

___

### CaCheckpointType

Re-exports [CaCheckpointType](../../enums/API/Entities/Asset/Checkpoints/Types/CaCheckpointType/CaCheckpointType.md)

___

### CapitalDistributionTx

Re-exports [CapitalDistributionTx](../../enums/Generated/Types/CapitalDistributionTx/CapitalDistributionTx.md)

___

### CddServiceProvidersTx

Re-exports [CddServiceProvidersTx](../../enums/Generated/Types/CddServiceProvidersTx/CddServiceProvidersTx.md)

___

### CheckpointScheduleParams

Re-exports [CheckpointScheduleParams](../API/Entities/CheckpointSchedule/Types/Types.md#checkpointscheduleparams)

___

### CheckpointTx

Re-exports [CheckpointTx](../../enums/Generated/Types/CheckpointTx/CheckpointTx.md)

___

### ClaimClassicTickerParams

Re-exports [ClaimClassicTickerParams](../../interfaces/API/Procedures/Types/ClaimClassicTickerParams/ClaimClassicTickerParams.md)

___

### ClaimCountTransferRestrictionInput

Re-exports [ClaimCountTransferRestrictionInput](../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md)

___

### ClaimOperation

Re-exports [ClaimOperation](../../enums/API/Procedures/Types/ClaimOperation/ClaimOperation.md)

___

### ClaimPercentageTransferRestrictionInput

Re-exports [ClaimPercentageTransferRestrictionInput](../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md)

___

### CommitteeMembershipTx

Re-exports [CommitteeMembershipTx](../../enums/Generated/Types/CommitteeMembershipTx/CommitteeMembershipTx.md)

___

### ComplianceManagerTx

Re-exports [ComplianceManagerTx](../../enums/Generated/Types/ComplianceManagerTx/ComplianceManagerTx.md)

___

### ConfigureDividendDistributionParams

Re-exports [ConfigureDividendDistributionParams](../../interfaces/API/Procedures/Types/ConfigureDividendDistributionParams/ConfigureDividendDistributionParams.md)

___

### ConnectParams

Re-exports [ConnectParams](../../interfaces/API/Client/Polymesh/ConnectParams/ConnectParams.md)

___

### ContractsTx

Re-exports [ContractsTx](../../enums/Generated/Types/ContractsTx/ContractsTx.md)

___

### ControllerTransferParams

Re-exports [ControllerTransferParams](../../interfaces/API/Procedures/Types/ControllerTransferParams/ControllerTransferParams.md)

___

### CorporateActionDefaultConfig

Re-exports [CorporateActionDefaultConfig](../../interfaces/API/Entities/Asset/CorporateActions/Types/CorporateActionDefaultConfig/CorporateActionDefaultConfig.md)

___

### CorporateActionKind

Re-exports [CorporateActionKind](../../enums/API/Entities/CorporateActionBase/Types/CorporateActionKind/CorporateActionKind.md)

___

### CorporateActionParams

Renames and re-exports [Params](../../interfaces/API/Entities/CorporateActionBase/Params/Params.md)

___

### CorporateActionTargets

Re-exports [CorporateActionTargets](../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md)

___

### CorporateActionTx

Re-exports [CorporateActionTx](../../enums/Generated/Types/CorporateActionTx/CorporateActionTx.md)

___

### CorporateBallotTx

Re-exports [CorporateBallotTx](../../enums/Generated/Types/CorporateBallotTx/CorporateBallotTx.md)

___

### CountTransferRestrictionInput

Re-exports [CountTransferRestrictionInput](../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md)

___

### CountryCode

Re-exports [CountryCode](../../enums/Generated/Types/CountryCode/CountryCode.md)

___

### CreateAssetParams

Re-exports [CreateAssetParams](../../interfaces/API/Procedures/Types/CreateAssetParams/CreateAssetParams.md)

___

### CreateAssetWithTickerParams

Re-exports [CreateAssetWithTickerParams](../../interfaces/API/Procedures/Types/CreateAssetWithTickerParams/CreateAssetWithTickerParams.md)

___

### CreateCheckpointScheduleParams

Re-exports [CreateCheckpointScheduleParams](../../interfaces/API/Procedures/Types/CreateCheckpointScheduleParams/CreateCheckpointScheduleParams.md)

___

### CreateGroupParams

Re-exports [CreateGroupParams](../../interfaces/API/Procedures/Types/CreateGroupParams/CreateGroupParams.md)

___

### CreateMultiSigParams

Re-exports [CreateMultiSigParams](../../interfaces/API/Procedures/Types/CreateMultiSigParams/CreateMultiSigParams.md)

___

### CreateTransactionBatchParams

Re-exports [CreateTransactionBatchParams](../../interfaces/API/Procedures/Types/CreateTransactionBatchParams/CreateTransactionBatchParams.md)

___

### CreateVenueParams

Re-exports [CreateVenueParams](../../interfaces/API/Procedures/Types/CreateVenueParams/CreateVenueParams.md)

___

### DecreaseAllowanceParams

Re-exports [DecreaseAllowanceParams](../../interfaces/API/Procedures/Types/DecreaseAllowanceParams/DecreaseAllowanceParams.md)

___

### DistributionParticipant

Re-exports [DistributionParticipant](../../interfaces/API/Entities/DividendDistribution/Types/DistributionParticipant/DistributionParticipant.md)

___

### DividendDistributionDetails

Re-exports [DividendDistributionDetails](../../interfaces/API/Entities/DividendDistribution/Types/DividendDistributionDetails/DividendDistributionDetails.md)

___

### DividendDistributionParams

Re-exports [DividendDistributionParams](../../interfaces/API/Entities/DividendDistribution/DividendDistributionParams/DividendDistributionParams.md)

___

### EditClaimsParams

Re-exports [EditClaimsParams](../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md)

___

### ExecuteManualInstructionParams

Re-exports [ExecuteManualInstructionParams](../../interfaces/API/Procedures/Types/ExecuteManualInstructionParams/ExecuteManualInstructionParams.md)

___

### ExternalAgentsTx

Re-exports [ExternalAgentsTx](../../enums/Generated/Types/ExternalAgentsTx/ExternalAgentsTx.md)

___

### GetTransferRestrictionReturnType

Re-exports [GetTransferRestrictionReturnType](../API/Procedures/Types/Types.md#gettransferrestrictionreturntype)

___

### GlobalMetadataKey

Re-exports [GlobalMetadataKey](../API/Entities/MetadataEntry/Types/Types.md#globalmetadatakey)

___

### GrandpaTx

Re-exports [GrandpaTx](../../enums/Generated/Types/GrandpaTx/GrandpaTx.md)

___

### HistoricInstruction

Re-exports [HistoricInstruction](../API/Entities/Venue/Types/Types.md#historicinstruction)

___

### HistoricSettlement

Re-exports [HistoricSettlement](../../interfaces/API/Entities/Portfolio/Types/HistoricSettlement/HistoricSettlement.md)

___

### IdentityBalance

Re-exports [IdentityBalance](../../interfaces/API/Entities/Asset/Types/IdentityBalance/IdentityBalance.md)

___

### IdentityTx

Re-exports [IdentityTx](../../enums/Generated/Types/IdentityTx/IdentityTx.md)

___

### ImOnlineTx

Re-exports [ImOnlineTx](../../enums/Generated/Types/ImOnlineTx/ImOnlineTx.md)

___

### IncreaseAllowanceParams

Re-exports [IncreaseAllowanceParams](../../interfaces/API/Procedures/Types/IncreaseAllowanceParams/IncreaseAllowanceParams.md)

___

### IndicesTx

Re-exports [IndicesTx](../../enums/Generated/Types/IndicesTx/IndicesTx.md)

___

### InputCaCheckpoint

Re-exports [InputCaCheckpoint](../API/Entities/Asset/Checkpoints/Types/Types.md#inputcacheckpoint)

___

### InputTargets

Re-exports [InputTargets](../API/Entities/CorporateActionBase/Types/Types.md#inputtargets)

___

### InputTaxWithholding

Re-exports [InputTaxWithholding](../API/Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)

___

### InstructionAffirmation

Re-exports [InstructionAffirmation](../../interfaces/API/Entities/Instruction/Types/InstructionAffirmation/InstructionAffirmation.md)

___

### InstructionAffirmationOperation

Re-exports [InstructionAffirmationOperation](../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md)

___

### InstructionDetails

Re-exports [InstructionDetails](../API/Entities/Instruction/Types/Types.md#instructiondetails)

___

### InstructionEndCondition

Re-exports [InstructionEndCondition](../API/Entities/Instruction/Types/Types.md#instructionendcondition)

___

### InstructionStatus

Re-exports [InstructionStatus](../../enums/API/Entities/Instruction/Types/InstructionStatus/InstructionStatus.md)

___

### InstructionStatusResult

Re-exports [InstructionStatusResult](../API/Entities/Instruction/Types/Types.md#instructionstatusresult)

___

### InstructionType

Re-exports [InstructionType](../../enums/API/Entities/Instruction/Types/InstructionType/InstructionType.md)

___

### InvestInOfferingParams

Re-exports [InvestInOfferingParams](../../interfaces/API/Procedures/Types/InvestInOfferingParams/InvestInOfferingParams.md)

___

### Investment

Re-exports [Investment](../../interfaces/API/Entities/Offering/Types/Investment/Investment.md)

___

### InviteAccountParams

Re-exports [InviteAccountParams](../../interfaces/API/Procedures/Types/InviteAccountParams/InviteAccountParams.md)

___

### InviteExternalAgentParams

Re-exports [InviteExternalAgentParams](../../interfaces/API/Procedures/Types/InviteExternalAgentParams/InviteExternalAgentParams.md)

___

### LaunchOfferingParams

Re-exports [LaunchOfferingParams](../../interfaces/API/Procedures/Types/LaunchOfferingParams/LaunchOfferingParams.md)

___

### Leg

Re-exports [Leg](../../interfaces/API/Entities/Instruction/Types/Leg/Leg.md)

___

### LinkCaDocsParams

Re-exports [LinkCaDocsParams](../../interfaces/API/Procedures/Types/LinkCaDocsParams/LinkCaDocsParams.md)

___

### MetadataDetails

Re-exports [MetadataDetails](../../interfaces/API/Entities/MetadataEntry/Types/MetadataDetails/MetadataDetails.md)

___

### MetadataLockStatus

Re-exports [MetadataLockStatus](../../enums/API/Entities/MetadataEntry/Types/MetadataLockStatus/MetadataLockStatus.md)

___

### MetadataSpec

Re-exports [MetadataSpec](../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md)

___

### MetadataType

Re-exports [MetadataType](../../enums/API/Entities/MetadataEntry/Types/MetadataType/MetadataType.md)

___

### MetadataValue

Re-exports [MetadataValue](../API/Entities/MetadataEntry/Types/Types.md#metadatavalue)

___

### MetadataValueDetails

Re-exports [MetadataValueDetails](../API/Entities/MetadataEntry/Types/Types.md#metadatavaluedetails)

___

### ModifyAssetParams

Re-exports [ModifyAssetParams](../API/Procedures/Types/Types.md#modifyassetparams)

___

### ModifyAssetTrustedClaimIssuersAddSetParams

Re-exports [ModifyAssetTrustedClaimIssuersAddSetParams](../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersAddSetParams/ModifyAssetTrustedClaimIssuersAddSetParams.md)

___

### ModifyAssetTrustedClaimIssuersRemoveParams

Re-exports [ModifyAssetTrustedClaimIssuersRemoveParams](../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersRemoveParams/ModifyAssetTrustedClaimIssuersRemoveParams.md)

___

### ModifyCaCheckpointParams

Re-exports [ModifyCaCheckpointParams](../../interfaces/API/Procedures/Types/ModifyCaCheckpointParams/ModifyCaCheckpointParams.md)

___

### ModifyCaDefaultConfigParams

Re-exports [ModifyCaDefaultConfigParams](../API/Procedures/Types/Types.md#modifycadefaultconfigparams)

___

### ModifyClaimsParams

Re-exports [ModifyClaimsParams](../API/Procedures/Types/Types.md#modifyclaimsparams)

___

### ModifyComplianceRequirementParams

Re-exports [ModifyComplianceRequirementParams](../API/Procedures/Types/Types.md#modifycompliancerequirementparams)

___

### ModifyCorporateActionsAgentParams

Re-exports [ModifyCorporateActionsAgentParams](../../interfaces/API/Procedures/Types/ModifyCorporateActionsAgentParams/ModifyCorporateActionsAgentParams.md)

___

### ModifyInstructionAffirmationParams

Re-exports [ModifyInstructionAffirmationParams](../../interfaces/API/Procedures/Types/ModifyInstructionAffirmationParams/ModifyInstructionAffirmationParams.md)

___

### ModifyMultiSigParams

Re-exports [ModifyMultiSigParams](../../interfaces/API/Procedures/Types/ModifyMultiSigParams/ModifyMultiSigParams.md)

___

### ModifyOfferingTimesParams

Re-exports [ModifyOfferingTimesParams](../API/Procedures/Types/Types.md#modifyofferingtimesparams)

___

### ModifyPrimaryIssuanceAgentParams

Re-exports [ModifyPrimaryIssuanceAgentParams](../../interfaces/API/Procedures/Types/ModifyPrimaryIssuanceAgentParams/ModifyPrimaryIssuanceAgentParams.md)

___

### ModifySignerPermissionsParams

Re-exports [ModifySignerPermissionsParams](../../interfaces/API/Procedures/Types/ModifySignerPermissionsParams/ModifySignerPermissionsParams.md)

___

### ModifyVenueParams

Re-exports [ModifyVenueParams](../API/Procedures/Types/Types.md#modifyvenueparams)

___

### ModuleName

Re-exports [ModuleName](../../enums/Generated/Types/ModuleName/ModuleName.md)

___

### MoveFundsParams

Re-exports [MoveFundsParams](../../interfaces/API/Procedures/Types/MoveFundsParams/MoveFundsParams.md)

___

### MultiSigDetails

Re-exports [MultiSigDetails](../../interfaces/API/Entities/MultiSig/Types/MultiSigDetails/MultiSigDetails.md)

___

### MultiSigProposalDetails

Re-exports [MultiSigProposalDetails](../../interfaces/API/Entities/MultiSigProposal/Types/MultiSigProposalDetails/MultiSigProposalDetails.md)

___

### MultiSigTx

Re-exports [MultiSigTx](../../enums/Generated/Types/MultiSigTx/MultiSigTx.md)

___

### OfferingBalanceStatus

Re-exports [OfferingBalanceStatus](../../enums/API/Entities/Offering/Types/OfferingBalanceStatus/OfferingBalanceStatus.md)

___

### OfferingDetails

Re-exports [OfferingDetails](../../interfaces/API/Entities/Offering/Types/OfferingDetails/OfferingDetails.md)

___

### OfferingSaleStatus

Re-exports [OfferingSaleStatus](../../enums/API/Entities/Offering/Types/OfferingSaleStatus/OfferingSaleStatus.md)

___

### OfferingStatus

Re-exports [OfferingStatus](../../interfaces/API/Entities/Offering/Types/OfferingStatus/OfferingStatus.md)

___

### OfferingTier

Re-exports [OfferingTier](../../interfaces/API/Entities/Offering/Types/OfferingTier/OfferingTier.md)

___

### OfferingTimingStatus

Re-exports [OfferingTimingStatus](../../enums/API/Entities/Offering/Types/OfferingTimingStatus/OfferingTimingStatus.md)

___

### PayDividendsParams

Re-exports [PayDividendsParams](../../interfaces/API/Procedures/Types/PayDividendsParams/PayDividendsParams.md)

___

### PercentageTransferRestrictionInput

Re-exports [PercentageTransferRestrictionInput](../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md)

___

### PipsTx

Re-exports [PipsTx](../../enums/Generated/Types/PipsTx/PipsTx.md)

___

### PolymeshCommitteeTx

Re-exports [PolymeshCommitteeTx](../../enums/Generated/Types/PolymeshCommitteeTx/PolymeshCommitteeTx.md)

___

### PolymeshContractsTx

Re-exports [PolymeshContractsTx](../../enums/Generated/Types/PolymeshContractsTx/PolymeshContractsTx.md)

___

### PolymeshError

Re-exports [PolymeshError](../Base/Types/Types.md#polymesherror)

___

### PolymeshTransaction

Re-exports [PolymeshTransaction](../Base/Types/Types.md#polymeshtransaction)

___

### PolymeshTransactionBatch

Re-exports [PolymeshTransactionBatch](../Base/Types/Types.md#polymeshtransactionbatch)

___

### PortfolioBalance

Re-exports [PortfolioBalance](../../interfaces/API/Entities/Portfolio/Types/PortfolioBalance/PortfolioBalance.md)

___

### PortfolioTx

Re-exports [PortfolioTx](../../enums/Generated/Types/PortfolioTx/PortfolioTx.md)

___

### PreimageTx

Re-exports [PreimageTx](../../enums/Generated/Types/PreimageTx/PreimageTx.md)

___

### ProposalStatus

Re-exports [ProposalStatus](../../enums/API/Entities/MultiSigProposal/Types/ProposalStatus/ProposalStatus.md)

___

### ProtocolFeeTx

Re-exports [ProtocolFeeTx](../../enums/Generated/Types/ProtocolFeeTx/ProtocolFeeTx.md)

___

### RedeemTokensParams

Re-exports [RedeemTokensParams](../../interfaces/API/Procedures/Types/RedeemTokensParams/RedeemTokensParams.md)

___

### RegisterIdentityParams

Re-exports [RegisterIdentityParams](../../interfaces/API/Procedures/Types/RegisterIdentityParams/RegisterIdentityParams.md)

___

### RegisterMetadataParams

Re-exports [RegisterMetadataParams](../API/Procedures/Types/Types.md#registermetadataparams)

___

### RelayerTx

Re-exports [RelayerTx](../../enums/Generated/Types/RelayerTx/RelayerTx.md)

___

### RemoveAssetRequirementParams

Re-exports [RemoveAssetRequirementParams](../../interfaces/API/Procedures/Types/RemoveAssetRequirementParams/RemoveAssetRequirementParams.md)

___

### RemoveAssetStatParams

Re-exports [RemoveAssetStatParams](../API/Procedures/Types/Types.md#removeassetstatparams)

___

### RemoveBalanceStatParams

Re-exports [RemoveBalanceStatParams](../API/Procedures/Types/Types.md#removebalancestatparams)

___

### RemoveCheckpointScheduleParams

Re-exports [RemoveCheckpointScheduleParams](../../interfaces/API/Procedures/Types/RemoveCheckpointScheduleParams/RemoveCheckpointScheduleParams.md)

___

### RemoveCorporateActionParams

Re-exports [RemoveCorporateActionParams](../../interfaces/API/Procedures/Types/RemoveCorporateActionParams/RemoveCorporateActionParams.md)

___

### RemoveCountStatParams

Re-exports [RemoveCountStatParams](../API/Procedures/Types/Types.md#removecountstatparams)

___

### RemoveExternalAgentParams

Re-exports [RemoveExternalAgentParams](../../interfaces/API/Procedures/Types/RemoveExternalAgentParams/RemoveExternalAgentParams.md)

___

### RemoveScopedBalanceParams

Re-exports [RemoveScopedBalanceParams](../API/Procedures/Types/Types.md#removescopedbalanceparams)

___

### RemoveScopedCountParams

Re-exports [RemoveScopedCountParams](../API/Procedures/Types/Types.md#removescopedcountparams)

___

### RemoveSecondaryAccountsParams

Re-exports [RemoveSecondaryAccountsParams](../../interfaces/API/Procedures/Types/RemoveSecondaryAccountsParams/RemoveSecondaryAccountsParams.md)

___

### RenamePortfolioParams

Re-exports [RenamePortfolioParams](../../interfaces/API/Procedures/Types/RenamePortfolioParams/RenamePortfolioParams.md)

___

### ReserveTickerParams

Re-exports [ReserveTickerParams](../../interfaces/API/Procedures/Types/ReserveTickerParams/ReserveTickerParams.md)

___

### RevokeClaimsParams

Re-exports [RevokeClaimsParams](../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)

___

### RewardsTx

Re-exports [RewardsTx](../../enums/Generated/Types/RewardsTx/RewardsTx.md)

___

### ScheduleDetails

Re-exports [ScheduleDetails](../../interfaces/API/Entities/CheckpointSchedule/Types/ScheduleDetails/ScheduleDetails.md)

___

### SchedulerTx

Re-exports [SchedulerTx](../../enums/Generated/Types/SchedulerTx/SchedulerTx.md)

___

### ScopeClaimProof

Re-exports [ScopeClaimProof](../../interfaces/API/Procedures/Types/ScopeClaimProof/ScopeClaimProof.md)

___

### SessionTx

Re-exports [SessionTx](../../enums/Generated/Types/SessionTx/SessionTx.md)

___

### SetAllowanceParams

Re-exports [SetAllowanceParams](../../interfaces/API/Procedures/Types/SetAllowanceParams/SetAllowanceParams.md)

___

### SetAssetDocumentsParams

Re-exports [SetAssetDocumentsParams](../../interfaces/API/Procedures/Types/SetAssetDocumentsParams/SetAssetDocumentsParams.md)

___

### SetAssetRequirementsParams

Re-exports [SetAssetRequirementsParams](../../interfaces/API/Procedures/Types/SetAssetRequirementsParams/SetAssetRequirementsParams.md)

___

### SetAssetStatParams

Re-exports [SetAssetStatParams](../API/Procedures/Types/Types.md#setassetstatparams)

___

### SetClaimCountTransferRestrictionsParams

Re-exports [SetClaimCountTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md)

___

### SetClaimPercentageTransferRestrictionsParams

Re-exports [SetClaimPercentageTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md)

___

### SetCountTransferRestrictionsParams

Re-exports [SetCountTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md)

___

### SetCustodianParams

Re-exports [SetCustodianParams](../../interfaces/API/Procedures/Types/SetCustodianParams/SetCustodianParams.md)

___

### SetGroupPermissionsParams

Re-exports [SetGroupPermissionsParams](../../interfaces/API/Procedures/Types/SetGroupPermissionsParams/SetGroupPermissionsParams.md)

___

### SetMetadataParams

Re-exports [SetMetadataParams](../API/Procedures/Types/Types.md#setmetadataparams)

___

### SetPercentageTransferRestrictionsParams

Re-exports [SetPercentageTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md)

___

### SetPermissionGroupParams

Re-exports [SetPermissionGroupParams](../../interfaces/API/Procedures/Types/SetPermissionGroupParams/SetPermissionGroupParams.md)

___

### SetRestrictionsParams

Re-exports [SetRestrictionsParams](../API/Procedures/Types/Types.md#setrestrictionsparams)

___

### SettlementLeg

Re-exports [SettlementLeg](../../interfaces/API/Entities/Portfolio/Types/SettlementLeg/SettlementLeg.md)

___

### SettlementTx

Re-exports [SettlementTx](../../enums/Generated/Types/SettlementTx/SettlementTx.md)

___

### StakingTx

Re-exports [StakingTx](../../enums/Generated/Types/StakingTx/StakingTx.md)

___

### StatisticsTx

Re-exports [StatisticsTx](../../enums/Generated/Types/StatisticsTx/StatisticsTx.md)

___

### StoTx

Re-exports [StoTx](../../enums/Generated/Types/StoTx/StoTx.md)

___

### SubsidizeAccountParams

Re-exports [SubsidizeAccountParams](../../interfaces/API/Procedures/Types/SubsidizeAccountParams/SubsidizeAccountParams.md)

___

### SubsidyData

Re-exports [SubsidyData](../../interfaces/API/Entities/Subsidy/Types/SubsidyData/SubsidyData.md)

___

### SubsidyWithAllowance

Re-exports [SubsidyWithAllowance](../../interfaces/API/Entities/Subsidy/Types/SubsidyWithAllowance/SubsidyWithAllowance.md)

___

### SudoTx

Re-exports [SudoTx](../../enums/Generated/Types/SudoTx/SudoTx.md)

___

### SystemTx

Re-exports [SystemTx](../../enums/Generated/Types/SystemTx/SystemTx.md)

___

### TargetTreatment

Re-exports [TargetTreatment](../../enums/API/Entities/CorporateActionBase/Types/TargetTreatment/TargetTreatment.md)

___

### TaxWithholding

Re-exports [TaxWithholding](../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md)

___

### TechnicalCommitteeMembershipTx

Re-exports [TechnicalCommitteeMembershipTx](../../enums/Generated/Types/TechnicalCommitteeMembershipTx/TechnicalCommitteeMembershipTx.md)

___

### TechnicalCommitteeTx

Re-exports [TechnicalCommitteeTx](../../enums/Generated/Types/TechnicalCommitteeTx/TechnicalCommitteeTx.md)

___

### TestUtilsTx

Re-exports [TestUtilsTx](../../enums/Generated/Types/TestUtilsTx/TestUtilsTx.md)

___

### TickerReservationDetails

Re-exports [TickerReservationDetails](../../interfaces/API/Entities/TickerReservation/Types/TickerReservationDetails/TickerReservationDetails.md)

___

### TickerReservationStatus

Re-exports [TickerReservationStatus](../../enums/API/Entities/TickerReservation/Types/TickerReservationStatus/TickerReservationStatus.md)

___

### Tier

Re-exports [Tier](../../interfaces/API/Entities/Offering/Types/Tier/Tier.md)

___

### TimestampTx

Re-exports [TimestampTx](../../enums/Generated/Types/TimestampTx/TimestampTx.md)

___

### TransactionsParams

Re-exports [TransactionsParams](../../interfaces/API/Procedures/Types/TransactionsParams/TransactionsParams.md)

___

### TransferAssetOwnershipParams

Re-exports [TransferAssetOwnershipParams](../../interfaces/API/Procedures/Types/TransferAssetOwnershipParams/TransferAssetOwnershipParams.md)

___

### TransferBreakdown

Re-exports [TransferBreakdown](../../interfaces/API/Entities/Asset/Types/TransferBreakdown/TransferBreakdown.md)

___

### TransferPolyxParams

Re-exports [TransferPolyxParams](../../interfaces/API/Procedures/Types/TransferPolyxParams/TransferPolyxParams.md)

___

### TransferRestrictionResult

Re-exports [TransferRestrictionResult](../../interfaces/API/Entities/Asset/Types/TransferRestrictionResult/TransferRestrictionResult.md)

___

### TransferTickerOwnershipParams

Re-exports [TransferTickerOwnershipParams](../../interfaces/API/Procedures/Types/TransferTickerOwnershipParams/TransferTickerOwnershipParams.md)

___

### TreasuryTx

Re-exports [TreasuryTx](../../enums/Generated/Types/TreasuryTx/TreasuryTx.md)

___

### TxGroupParams

Re-exports [TxGroupParams](../../interfaces/API/Procedures/Types/TxGroupParams/TxGroupParams.md)

___

### TxTag

Re-exports [TxTag](../Generated/Types/Types.md#txtag)

___

### TxTags

Re-exports [TxTags](../Generated/Types/Types.md#txtags)

___

### UpgradeCommitteeMembershipTx

Re-exports [UpgradeCommitteeMembershipTx](../../enums/Generated/Types/UpgradeCommitteeMembershipTx/UpgradeCommitteeMembershipTx.md)

___

### UpgradeCommitteeTx

Re-exports [UpgradeCommitteeTx](../../enums/Generated/Types/UpgradeCommitteeTx/UpgradeCommitteeTx.md)

___

### UtilityTx

Re-exports [UtilityTx](../../enums/Generated/Types/UtilityTx/UtilityTx.md)

___

### VenueDetails

Re-exports [VenueDetails](../../interfaces/API/Entities/Venue/Types/VenueDetails/VenueDetails.md)

___

### VenueType

Re-exports [VenueType](../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)

___

### WaivePermissionsParams

Re-exports [WaivePermissionsParams](../../interfaces/API/Procedures/Types/WaivePermissionsParams/WaivePermissionsParams.md)

## Type Aliases

### AccountBalance

Ƭ **AccountBalance**: [`Balance`](../../interfaces/Types/Balance/Balance.md)

#### Defined in

[types/index.ts:715](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L715)

___

### AddRelayerPayingKeyAuthorizationData

Ƭ **AddRelayerPayingKeyAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`AddRelayerPayingKey`](../../enums/Types/AuthorizationType/AuthorizationType.md#addrelayerpayingkey) |
| `value` | [`SubsidyData`](../../interfaces/API/Entities/Subsidy/Types/SubsidyData/SubsidyData.md) |

#### Defined in

[types/index.ts:1094](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1094)

___

### Authorization

Ƭ **Authorization**: [`RotatePrimaryKeyAuthorizationData`](Types.md#rotateprimarykeyauthorizationdata) \| [`JoinIdentityAuthorizationData`](Types.md#joinidentityauthorizationdata) \| [`PortfolioCustodyAuthorizationData`](Types.md#portfoliocustodyauthorizationdata) \| [`BecomeAgentAuthorizationData`](Types.md#becomeagentauthorizationdata) \| [`AddRelayerPayingKeyAuthorizationData`](Types.md#addrelayerpayingkeyauthorizationdata) \| [`RotatePrimaryKeyToSecondaryData`](Types.md#rotateprimarykeytosecondarydata) \| [`GenericAuthorizationData`](Types.md#genericauthorizationdata)

Authorization request data corresponding to type

#### Defined in

[types/index.ts:1114](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1114)

___

### BecomeAgentAuthorizationData

Ƭ **BecomeAgentAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`BecomeAgent`](../../enums/Types/AuthorizationType/AuthorizationType.md#becomeagent) |
| `value` | [`KnownPermissionGroup`](../../classes/API/Entities/KnownPermissionGroup/KnownPermissionGroup.md) \| [`CustomPermissionGroup`](../../classes/API/Entities/CustomPermissionGroup/CustomPermissionGroup.md) |

#### Defined in

[types/index.ts:1089](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1089)

___

### Claim

Ƭ **Claim**: [`ScopedClaim`](Types.md#scopedclaim) \| [`UnscopedClaim`](Types.md#unscopedclaim)

#### Defined in

[types/index.ts:292](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L292)

___

### ClaimCountStatInput

Ƭ **ClaimCountStatInput**: { `claimType`: [`Accredited`](../../enums/Types/ClaimType/ClaimType.md#accredited) ; `issuer`: [`Identity`](../../classes/API/Entities/Identity/Identity.md) ; `value`: { `accredited`: `BigNumber` ; `nonAccredited`: `BigNumber`  }  } \| { `claimType`: [`Affiliate`](../../enums/Types/ClaimType/ClaimType.md#affiliate) ; `issuer`: [`Identity`](../../classes/API/Entities/Identity/Identity.md) ; `value`: { `affiliate`: `BigNumber` ; `nonAffiliate`: `BigNumber`  }  } \| { `claimType`: [`Jurisdiction`](../../enums/Types/ClaimType/ClaimType.md#jurisdiction) ; `issuer`: [`Identity`](../../classes/API/Entities/Identity/Identity.md) ; `value`: { `count`: `BigNumber` ; `countryCode`: [`CountryCode`](../../enums/Generated/Types/CountryCode/CountryCode.md)  }[]  }

#### Defined in

[types/index.ts:1379](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1379)

___

### Condition

Ƭ **Condition**: [`SingleClaimCondition`](../../interfaces/Types/SingleClaimCondition/SingleClaimCondition.md) \| [`MultiClaimCondition`](../../interfaces/Types/MultiClaimCondition/MultiClaimCondition.md) \| [`IdentityCondition`](../../interfaces/Types/IdentityCondition/IdentityCondition.md) \| [`ExternalAgentCondition`](../../interfaces/Types/ExternalAgentCondition/ExternalAgentCondition.md) & [`ConditionBase`](../../interfaces/Types/ConditionBase/ConditionBase.md)

#### Defined in

[types/index.ts:453](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L453)

___

### GenericAuthorizationData

Ƭ **GenericAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | `Exclude`<[`AuthorizationType`](../../enums/Types/AuthorizationType/AuthorizationType.md), [`RotatePrimaryKey`](../../enums/Types/AuthorizationType/AuthorizationType.md#rotateprimarykey) \| [`JoinIdentity`](../../enums/Types/AuthorizationType/AuthorizationType.md#joinidentity) \| [`PortfolioCustody`](../../enums/Types/AuthorizationType/AuthorizationType.md#portfoliocustody) \| [`BecomeAgent`](../../enums/Types/AuthorizationType/AuthorizationType.md#becomeagent) \| [`AddRelayerPayingKey`](../../enums/Types/AuthorizationType/AuthorizationType.md#addrelayerpayingkey) \| [`RotatePrimaryKeyToSecondary`](../../enums/Types/AuthorizationType/AuthorizationType.md#rotateprimarykeytosecondary)\> |
| `value` | `string` |

#### Defined in

[types/index.ts:1099](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1099)

___

### GenericPolymeshTransaction

Ƭ **GenericPolymeshTransaction**<`ProcedureReturnValue`, `ReturnValue`\>: [`PolymeshTransaction`](../../classes/Base/PolymeshTransaction/PolymeshTransaction.md)<`ProcedureReturnValue`, `ReturnValue`\> \| [`PolymeshTransactionBatch`](../../classes/Base/PolymeshTransactionBatch/PolymeshTransactionBatch.md)<`ProcedureReturnValue`, `ReturnValue`\>

#### Type parameters

| Name |
| :------ |
| `ProcedureReturnValue` |
| `ReturnValue` |

#### Defined in

[types/index.ts:1585](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1585)

___

### GroupPermissions

Ƭ **GroupPermissions**: `Pick`<[`Permissions`](../../interfaces/Types/Permissions/Permissions.md), ``"transactions"`` \| ``"transactionGroups"``\>

Asset permissions shared by agents in a group

#### Defined in

[types/index.ts:977](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L977)

___

### InputCondition

Ƭ **InputCondition**: [`SingleClaimCondition`](../../interfaces/Types/SingleClaimCondition/SingleClaimCondition.md) \| [`MultiClaimCondition`](../../interfaces/Types/MultiClaimCondition/MultiClaimCondition.md) \| [`Modify`](Utils/Utils.md#modify)<[`IdentityCondition`](../../interfaces/Types/IdentityCondition/IdentityCondition.md), { `identity`: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md)  }\> \| [`ExternalAgentCondition`](../../interfaces/Types/ExternalAgentCondition/ExternalAgentCondition.md) & [`InputConditionBase`](Types.md#inputconditionbase)

#### Defined in

[types/index.ts:461](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L461)

___

### InputConditionBase

Ƭ **InputConditionBase**: [`Modify`](Utils/Utils.md#modify)<[`ConditionBase`](../../interfaces/Types/ConditionBase/ConditionBase.md), { `trustedClaimIssuers?`: [`InputTrustedClaimIssuer`](Types.md#inputtrustedclaimissuer)[]  }\>

#### Defined in

[types/index.ts:424](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L424)

___

### InputCorporateActionTargets

Ƭ **InputCorporateActionTargets**: [`Modify`](Utils/Utils.md#modify)<[`CorporateActionTargets`](../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md), { `identities`: (`string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md))[]  }\>

Targets of a corporate action in a flexible structure for input purposes

#### Defined in

[types/index.ts:1568](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1568)

___

### InputCorporateActionTaxWithholdings

Ƭ **InputCorporateActionTaxWithholdings**: [`Modify`](Utils/Utils.md#modify)<[`TaxWithholding`](../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md), { `identity`: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md)  }\>[]

Per-Identity tax withholdings of a corporate action in a flexible structure for input purposes

#### Defined in

[types/index.ts:1578](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1578)

___

### InputRequirement

Ƭ **InputRequirement**: [`Modify`](Utils/Utils.md#modify)<[`Requirement`](../../interfaces/Types/Requirement/Requirement.md), { `conditions`: [`InputCondition`](Types.md#inputcondition)[]  }\>

#### Defined in

[types/index.ts:487](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L487)

___

### InputStatClaim

Ƭ **InputStatClaim**: [`StatJurisdictionClaimInput`](../../interfaces/Types/StatJurisdictionClaimInput/StatJurisdictionClaimInput.md) \| [`StatAccreditedClaimInput`](../../interfaces/Types/StatAccreditedClaimInput/StatAccreditedClaimInput.md) \| [`StatAffiliateClaimInput`](../../interfaces/Types/StatAffiliateClaimInput/StatAffiliateClaimInput.md)

#### Defined in

[types/index.ts:319](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L319)

___

### InputStatType

Ƭ **InputStatType**: { `type`: [`Count`](../../enums/Types/StatType/StatType.md#count) \| [`Balance`](../../enums/Types/StatType/StatType.md#balance)  } \| { `claimIssuer`: [`StatClaimIssuer`](../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md) ; `type`: [`ScopedCount`](../../enums/Types/StatType/StatType.md#scopedcount) \| [`ScopedBalance`](../../enums/Types/StatType/StatType.md#scopedbalance)  }

#### Defined in

[types/index.ts:324](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L324)

___

### InputTrustedClaimIssuer

Ƭ **InputTrustedClaimIssuer**: [`Modify`](Utils/Utils.md#modify)<[`TrustedClaimIssuer`](../../interfaces/Types/TrustedClaimIssuer/TrustedClaimIssuer.md), { `identity`: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md)  }\>

#### Defined in

[types/index.ts:400](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L400)

___

### JoinIdentityAuthorizationData

Ƭ **JoinIdentityAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`JoinIdentity`](../../enums/Types/AuthorizationType/AuthorizationType.md#joinidentity) |
| `value` | [`Permissions`](../../interfaces/Types/Permissions/Permissions.md) |

#### Defined in

[types/index.ts:1079](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1079)

___

### MapTxData

Ƭ **MapTxData**<`ArgsArray`\>: { [K in keyof ArgsArray]: ArgsArray[K] extends unknown[] ? TxData<ArgsArray[K]\> : never }

Apply the [TxData](../../interfaces/Types/TxData/TxData.md) type to all args in an array

#### Type parameters

| Name | Type |
| :------ | :------ |
| `ArgsArray` | extends `unknown`[][] |

#### Defined in

[types/index.ts:1612](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1612)

___

### MortalityProcedureOpt

Ƭ **MortalityProcedureOpt**: [`ImmortalProcedureOptValue`](../../interfaces/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md) \| [`MortalProcedureOptValue`](../../interfaces/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)

#### Defined in

[types/index.ts:1480](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1480)

___

### NextKey

Ƭ **NextKey**: `string` \| `BigNumber` \| ``null``

#### Defined in

[types/index.ts:722](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L722)

___

### PayingAccount

Ƭ **PayingAccount**: { `account`: [`Account`](../../classes/API/Entities/Account/Account.md) ; `allowance`: `BigNumber` ; `type`: [`Subsidy`](../../enums/Types/PayingAccountType/PayingAccountType.md#subsidy)  } \| { `account`: [`Account`](../../classes/API/Entities/Account/Account.md) ; `type`: [`Caller`](../../enums/Types/PayingAccountType/PayingAccountType.md#caller) \| [`Other`](../../enums/Types/PayingAccountType/PayingAccountType.md#other)  }

Data representing the Account responsible for paying fees for a transaction

#### Defined in

[types/index.ts:773](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L773)

___

### PermissionsLike

Ƭ **PermissionsLike**: { `assets?`: [`SectionPermissions`](../../interfaces/Types/SectionPermissions/SectionPermissions.md)<`string` \| [`Asset`](../../classes/API/Entities/Asset/Asset.md)\> \| ``null`` ; `portfolios?`: [`SectionPermissions`](../../interfaces/Types/SectionPermissions/SectionPermissions.md)<[`PortfolioLike`](Types.md#portfoliolike)\> \| ``null``  } & { `transactions?`: [`TransactionPermissions`](../../interfaces/Types/TransactionPermissions/TransactionPermissions.md) \| ``null``  } \| { `transactionGroups?`: [`TxGroup`](../../enums/Types/TxGroup/TxGroup.md)[]  }

Permissions to grant to a Signer over an Identity

[Permissions](../../interfaces/Types/Permissions/Permissions.md)

**`Note`**

 TxGroups in the `transactionGroups` array will be transformed into their corresponding `TxTag`s

#### Defined in

[types/index.ts:1212](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1212)

___

### PortfolioCustodyAuthorizationData

Ƭ **PortfolioCustodyAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`PortfolioCustody`](../../enums/Types/AuthorizationType/AuthorizationType.md#portfoliocustody) |
| `value` | [`NumberedPortfolio`](../../classes/API/Entities/NumberedPortfolio/NumberedPortfolio.md) \| [`DefaultPortfolio`](../../classes/API/Entities/DefaultPortfolio/DefaultPortfolio.md) |

#### Defined in

[types/index.ts:1084](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1084)

___

### PortfolioLike

Ƭ **PortfolioLike**: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md) \| [`NumberedPortfolio`](../../classes/API/Entities/NumberedPortfolio/NumberedPortfolio.md) \| [`DefaultPortfolio`](../../classes/API/Entities/DefaultPortfolio/DefaultPortfolio.md) \| { `id`: `BigNumber` ; `identity`: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md)  }

#### Defined in

[types/index.ts:1198](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1198)

___

### PrivateKey

Ƭ **PrivateKey**: { `uri`: `string`  } \| { `mnemonic`: `string`  } \| { `seed`: `string`  }

URI|mnemonic|hex representation of a private key

#### Defined in

[types/index.ts:1554](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1554)

___

### Role

Ƭ **Role**: [`TickerOwnerRole`](../../interfaces/Types/TickerOwnerRole/TickerOwnerRole.md) \| [`CddProviderRole`](../../interfaces/Types/CddProviderRole/CddProviderRole.md) \| [`VenueOwnerRole`](../../interfaces/Types/VenueOwnerRole/VenueOwnerRole.md) \| [`PortfolioCustodianRole`](../../interfaces/Types/PortfolioCustodianRole/PortfolioCustodianRole.md) \| [`IdentityRole`](../../interfaces/Types/IdentityRole/IdentityRole.md)

#### Defined in

[types/index.ts:110](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L110)

___

### RotatePrimaryKeyAuthorizationData

Ƭ **RotatePrimaryKeyAuthorizationData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`RotatePrimaryKey`](../../enums/Types/AuthorizationType/AuthorizationType.md#rotateprimarykey) |

#### Defined in

[types/index.ts:1070](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1070)

___

### RotatePrimaryKeyToSecondaryData

Ƭ **RotatePrimaryKeyToSecondaryData**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`RotatePrimaryKeyToSecondary`](../../enums/Types/AuthorizationType/AuthorizationType.md#rotateprimarykeytosecondary) |
| `value` | [`Permissions`](../../interfaces/Types/Permissions/Permissions.md) |

#### Defined in

[types/index.ts:1074](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1074)

___

### ScopedClaim

Ƭ **ScopedClaim**: [`JurisdictionClaim`](../../interfaces/Types/JurisdictionClaim/JurisdictionClaim.md) \| [`InvestorUniquenessClaim`](../../interfaces/Types/InvestorUniquenessClaim/InvestorUniquenessClaim.md) \| [`AccreditedClaim`](../../interfaces/Types/AccreditedClaim/AccreditedClaim.md) \| [`AffiliateClaim`](../../interfaces/Types/AffiliateClaim/AffiliateClaim.md) \| [`BuyLockupClaim`](../../interfaces/Types/BuyLockupClaim/BuyLockupClaim.md) \| [`SellLockupClaim`](../../interfaces/Types/SellLockupClaim/SellLockupClaim.md) \| [`KycClaim`](../../interfaces/Types/KycClaim/KycClaim.md) \| [`ExemptedClaim`](../../interfaces/Types/ExemptedClaim/ExemptedClaim.md) \| [`BlockedClaim`](../../interfaces/Types/BlockedClaim/BlockedClaim.md)

#### Defined in

[types/index.ts:279](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L279)

___

### Signer

Ƭ **Signer**: [`Identity`](../../classes/API/Entities/Identity/Identity.md) \| [`Account`](../../classes/API/Entities/Account/Account.md)

#### Defined in

[types/index.ts:1180](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1180)

___

### StatClaimType

Ƭ **StatClaimType**: [`Accredited`](../../enums/Types/ClaimType/ClaimType.md#accredited) \| [`Affiliate`](../../enums/Types/ClaimType/ClaimType.md#affiliate) \| [`Jurisdiction`](../../enums/Types/ClaimType/ClaimType.md#jurisdiction)

#### Defined in

[types/index.ts:302](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L302)

___

### SubCallback

Ƭ **SubCallback**<`T`\>: (`result`: `T`) => `void` \| `Promise`<`void`\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Type declaration

▸ (`result`): `void` \| `Promise`<`void`\>

##### Parameters

| Name | Type |
| :------ | :------ |
| `result` | `T` |

##### Returns

`void` \| `Promise`<`void`\>

#### Defined in

[types/index.ts:684](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L684)

___

### TransactionArgument

Ƭ **TransactionArgument**: { `_rawType`: `TypeDef` ; `name`: `string` ; `optional`: `boolean`  } & [`PlainTransactionArgument`](../../interfaces/Types/PlainTransactionArgument/PlainTransactionArgument.md) \| [`ArrayTransactionArgument`](../../interfaces/Types/ArrayTransactionArgument/ArrayTransactionArgument.md) \| [`SimpleEnumTransactionArgument`](../../interfaces/Types/SimpleEnumTransactionArgument/SimpleEnumTransactionArgument.md) \| [`ComplexTransactionArgument`](../../interfaces/Types/ComplexTransactionArgument/ComplexTransactionArgument.md)

#### Defined in

[types/index.ts:1169](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1169)

___

### TransactionArray

Ƭ **TransactionArray**<`ReturnValues`\>: { [K in keyof ReturnValues]: GenericPolymeshTransaction<any, ReturnValues[K]\> }

#### Type parameters

| Name | Type |
| :------ | :------ |
| `ReturnValues` | extends readonly [...unknown[]] |

#### Defined in

[types/index.ts:1589](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1589)

___

### TransactionOrderByInput

Ƭ **TransactionOrderByInput**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `field` | [`TransactionOrderFields`](../../enums/Types/TransactionOrderFields/TransactionOrderFields.md) |
| `order` | [`Order`](../../enums/Types/Order/Order.md) |

#### Defined in

[middleware/types.ts:1753](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L1753)

___

### TransferRestriction

Ƭ **TransferRestriction**: { `type`: [`Count`](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md#count) ; `value`: `BigNumber`  } \| { `type`: [`Percentage`](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ; `value`: `BigNumber`  } \| { `type`: [`ClaimCount`](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ; `value`: [`ClaimCountRestrictionValue`](../../interfaces/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md)  } \| { `type`: [`ClaimPercentage`](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md#claimpercentage) ; `value`: [`ClaimPercentageRestrictionValue`](../../interfaces/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md)  }

#### Defined in

[types/index.ts:1341](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L1341)

___

### UnscopedClaim

Ƭ **UnscopedClaim**: [`NoDataClaim`](../../interfaces/Types/NoDataClaim/NoDataClaim.md) \| [`NoTypeClaim`](../../interfaces/Types/NoTypeClaim/NoTypeClaim.md) \| [`CddClaim`](../../interfaces/Types/CddClaim/CddClaim.md) \| [`InvestorUniquenessV2Claim`](../../interfaces/Types/InvestorUniquenessV2Claim/InvestorUniquenessV2Claim.md)

#### Defined in

[types/index.ts:290](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L290)

___

### UnsubCallback

Ƭ **UnsubCallback**: () => `void`

#### Type declaration

▸ (): `void`

##### Returns

`void`

#### Defined in

[types/index.ts:686](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/types/index.ts#L686)

## Variables

### middlewareV2EnumMap

• `Const` **middlewareV2EnumMap**: `Record`<`string`, `string`\>

#### Defined in

[middleware/enumsV2.ts:16](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/enumsV2.ts#L16)
